; ModuleID = '/home/carl/AnghaBench/linux/net/ipv4/extr_inetpeer.c_inet_putpeer.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv4/extr_inetpeer.c_inet_putpeer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inet_peer = type { i32, i32, i64 }

@jiffies = common dso_local global i64 0, align 8
@inetpeer_free_rcu = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @inet_putpeer(%struct.inet_peer* %0) #0 {
  %2 = alloca %struct.inet_peer*, align 8
  store %struct.inet_peer* %0, %struct.inet_peer** %2, align 8
  %3 = load i64, i64* @jiffies, align 8
  %4 = load %struct.inet_peer*, %struct.inet_peer** %2, align 8
  %5 = getelementptr inbounds %struct.inet_peer, %struct.inet_peer* %4, i32 0, i32 2
  store i64 %3, i64* %5, align 8
  %6 = load %struct.inet_peer*, %struct.inet_peer** %2, align 8
  %7 = getelementptr inbounds %struct.inet_peer, %struct.inet_peer* %6, i32 0, i32 1
  %8 = call i64 @refcount_dec_and_test(i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.inet_peer*, %struct.inet_peer** %2, align 8
  %12 = getelementptr inbounds %struct.inet_peer, %struct.inet_peer* %11, i32 0, i32 0
  %13 = load i32, i32* @inetpeer_free_rcu, align 4
  %14 = call i32 @call_rcu(i32* %12, i32 %13)
  br label %15

15:                                               ; preds = %10, %1
  ret void
}

declare dso_local i64 @refcount_dec_and_test(i32*) #1

declare dso_local i32 @call_rcu(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
